Death domain update

--- a/frost.html
+++ b/frost.html
@@ -63,7 +63,41 @@
     <h1 class="sub-header" id="majors">Majors</h1>
 
     <section>
-
+        <div class="container-major">        
+            <div class="header-major">
+                <div>
+                    <h2 id="abominable-snowman">Abominable Snowman</h2>            
+                    <img src="images/Discipline/Major/Icon_Disc_Major_AbominableSnowman.png">
+                </div>
+                <div>
+                    <h2 id="requirements">Requirements</h2>
+                    <p>Trait: Frost, Death</p>
+                    <p>Slot: Major</p>
+                    <h2 id="statistics">Statistics</h2>
+                    <p>Critical Strike: +2%</p>
+                    <p>Ice Damage Bonus: +2%</p>
+                    <h2>Discipline</h2>
+                    <h6>Powers Granted</h6>
+                        <div>
+                            <h3>Aura Of Terror</h3>
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_AuraOfTerror.png">                            
+                            <p>Increases your Perception by 10 and surrounds you with an aura fear, revealing
+                                Stealthed enemies for 15 seconds.
+                                <br><br>
+                                Enemies who remain nearby are Suppressed and afflicted with Frostbite, causing
+                                81 Ice damage seven times over 14 seconds. 
+                            </p>
+                        </div>
+                        <div>
+                            <h3>Terrifying Features</h3>
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_TerrifyingFeatures.png">
+                            <p>Protects you with a powerful enchantment periodically stunning attackers.<br><br>
+                                This can only occur once every 24 seconds.
+                            </p>
+                        </div>                                       
+                </div>                                            
+            </div>                                               
+        </div>
     </section>
 
     <h1 class="sub-header" id="minors">Minors</h1>
