--- a/dark.html
+++ b/dark.html
@@ -164,7 +164,8 @@
                         </div>                                       
                 </div>                                            
             </div>                                               
-        </div><div class="container-major">        
+        </div>
+        <div class="container-major">        
             <div class="header-major">
                 <div>
                     <h2 id="defender">Lightfoot</h2>            
