--- a/dark.html
+++ b/dark.html
@@ -264,7 +264,8 @@
                 </div>                                            
             </div>                                               
         </div>
-    </div><div class="container-major">        
+    </div>
+    <div class="container-major">        
         <div class="header-major">
             <div>
                 <h2 id="poisoner">Poisoner</h2>            
