--- a/nature.html
+++ b/nature.html
@@ -227,7 +227,7 @@
                             <img src="images/Powers/Icon_Powers_Graphic_Disc_Purgative.png">
                             <p>Removes all Bleeds, Electrocution, Burning, Corruption, Exhaustion and Blackmantle
                                 from your group members and gives a short Immunity to those removed.
-                                Increases your Organic Resictances by 1500 for 12 seconds.
+                                Increases your Organic Resistances by 1500 for 12 seconds.
                             </p>
                         </div>                                         
                 </div>                                            
