Multiple domains updated

--- a/fire.html
+++ b/fire.html
@@ -427,7 +427,8 @@
                     </div>               
                 </div>
             </div>
-        </div><div class="container-major">        
+        </div>
+        <div class="container-major">        
             <div class="header-major">
                 <div>
                     <h2 id="indulgence">Indulgence</h2>            
