--- a/death.html
+++ b/death.html
@@ -160,7 +160,8 @@
                         </div>                                       
                 </div>                                            
             </div>                                               
-        </div><div class="container-major">        
+        </div>
+        <div class="container-major">        
             <div class="header-major">
                 <div>
                     <h2 id="blade-master">Blade Master</h2>            
