--- a/shadow.html
+++ b/shadow.html
@@ -175,14 +175,19 @@
                     <h6>Powers Granted</h6>
                         <div>
                             <h3>Stink Bomb</h3>
-                            <img src="images/Powers/Icon_Powers_Graphic_Disc_">
-                            <p>E.
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_StinkBomb.png">
+                            <p>Torments enemies with a noxious targeted area attack Stunning and dealing
+                                173 Nature damage to them.<br><br>
+                                This power will return you to Stealth if you take no damage while
+                                executing.
                             </p>
                         </div>
                         <div>
                             <h3>Preparation</h3>
-                            <img src="images/Powers/Icon_Powers_Graphic_Disc_">
-                            <p>C.                                
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_Preparation.png">
+                            <p>Allows you to plan your next attack when entering Stealth, immediately
+                                recovering a Pip if you don't have one, and periodically gaining additional Pips
+                                every 30 seconds as you maintain Stealth.                                
                             </p>
                         </div>                                       
                 </div>                                            
@@ -205,14 +210,17 @@
                     <h6>Powers Granted</h6>
                         <div>
                             <h3>Vampire Sight</h3>
-                            <img src="images/Powers/Icon_Powers_Graphic_Disc_">
-                            <p>E.
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_TerrifyingFeatures.png">
+                            <p>Increases your Perception by 25, Far-Sight by 25, Stealth by 25 and 
+                                Movement Speed: Stealth by 25 during night time.
                             </p>
                         </div>
                         <div>
                             <h3>Feeding Time</h3>
-                            <img src="images/Powers/Icon_Powers_Graphic_Disc_">
-                            <p>C.                                
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_PeripheralVision.png">
+                            <p>Grants a chance for attacks to send you into a feeding frenzy for 15 
+                                seconds, granting Lifesteal for 25 and increasing Attack Power for 50.<br><br>
+                                This effect can only occur once every 20 seconds.                                
                             </p>
                         </div>                                       
                 </div>                                            
@@ -235,14 +243,20 @@
                     <h6>Powers Granted</h6>
                         <div>
                             <h3>Alter Reality</h3>
-                            <img src="images/Powers/Icon_Powers_Graphic_Disc_">
-                            <p>E.
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_AlterReality.png">
+                            <p>Places a Heal Absorption shield on the target wich absorbs incoming heals
+                                and applies a debuff that reduces the incoming Healing Critical Chance by
+                                20% for 30 seconds. Healing the target for 500 will remove the shield.<br><br>
+                                If the shield is healed off within 30 seconds, it will explode dealing 203
+                                Nature damage to nearby enemies.
                             </p>
                         </div>
                         <div>
                             <h3>Last Resort</h3>
-                            <img src="images/Powers/Icon_Powers_Graphic_Disc_">
-                            <p>C.                                
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_LastResort.png">
+                            <p>Increases your Critical Strike and Critical Damage by 25% while your Health
+                                is below 35%.<br><br>
+                                This can only occur once every 5 seconds.                                
                             </p>
                         </div>                                       
                 </div>                                            
