--- a/storm.html
+++ b/storm.html
@@ -43,8 +43,7 @@
             Hydrologist<br>
             Pixie<br>
             Reality Warper<br>
-            Unstable Mage<br>
-            Windlord            
+            Unstable Mage            
         </div>
         <div class="domain-img"><img src="images/Domains/UI_Icon_Storm.png"></div>
         <div class="domain-minors">
@@ -80,14 +79,16 @@
                     <h6>Powers Granted</h6>
                         <div>
                             <h3>Storm Avatar</h3>
-                            <img src="images/Powers/Icon_Powers_Graphic_">
-                            <p>D.
+                            <img src="images/Powers/Icon_Powers_Graphic_Drud_StormAvatar.png">
+                            <p>Empowers you increasing Damage Bonus and Critical Strike by 10%.
                             </p>
                         </div>
                         <div>
                             <h3>Call Lightning</h3>
-                            <img src="images/Powers/Icon_Powers_Graphic_">
-                            <p>C.                                
+                            <img src="images/Powers/Icon_Powers_Graphic_Drud_ArcingLightningAOE.png">
+                            <p>Calls lightning to strike an area, stunning enemies in the area, causing
+                                82 Electricity damage and applying Electrocution.<br><br>
+                                Electrocution causes 49 Electricity damage every second for 12 seconds.                                
                             </p>
                         </div>                                       
                 </div>                                            
@@ -249,14 +250,20 @@
                     <h6>Powers Granted</h6>
                         <div>
                             <h3>Alter Reality</h3>
-                            <img src="images/Powers/Icon_Powers_Graphic_Disc_">
-                            <p>E.
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_AlterReality.png">
+                            <p>Places a Heal Absorption shield on the target wich absorbs incoming heals
+                                and applies a debuff that reduces the incoming Healing Critical Chance by
+                                20% for 30 seconds. Healing the target for 500 will remove the shield.<br><br>
+                                If the shield is healed off within 30 seconds, it will explode dealing 203
+                                Nature damage to nearby enemies.
                             </p>
                         </div>
                         <div>
                             <h3>Last Resort</h3>
-                            <img src="images/Powers/Icon_Powers_Graphic_Disc_">
-                            <p>C.                                
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_LastResort.png">
+                            <p>Increases your Critical Strike and Critical Damage by 25% while your Health
+                                is below 35%.<br><br>
+                                This can only occur once every 5 seconds.                                
                             </p>
                         </div>                                       
                 </div>                                            
