War update battle typo

--- a/battle.html
+++ b/battle.html
@@ -145,7 +145,7 @@
                         <div>
                             <h3>Cracked Armor</h3>
                             <img src="images/Powers/Icon_Powers_Graphic_Disc_RevealWeakness.png">
-                            <p>Enhances group mebers and you increasing Crushing Penetration by 15%
+                            <p>Enhances group members and you increasing Crushing Penetration by 15%
                                 for 30 seconds.
                             </p>
                         </div>
