Fixed dead links

--- a/assassin.html
+++ b/assassin.html
@@ -70,23 +70,23 @@
         <div class="class-domains"><h2>Domains</h2></div>
         <div class="class-domains-text1">
             <ul>
-                <li><a href="#">Death</a></li>
-                <li><a href="#">Plague</a></li>
-                <li><a href="#">Shadow</a></li>
+                <li><a href="death.html" target="_blank">Death</a></li>
+                <li><a href="plague.html" target="_blank">Plague</a></li>
+                <li><a href="shadow.html" target="_blank">Shadow</a></li>
             </ul>
         </div>    
         <div class="class-domains-text2">
             <ul>
-                <li><a href="#">Plague</a></li>
-                <li><a href="#">Shadow</a></li>
-                <li><a href="#">Wind</a></li>
+                <li><a href="plague.html" target="_blank">Plague</a></li>
+                <li><a href="shadow.html" target="_blank">Shadow</a></li>
+                <li><a href="wind.html" target="_blank">Wind</a></li>
             </ul>
         </div>             
         <div class="class-domains-text3">
             <ul>
-                <li><a href="#">Death</a></li>
-                <li><a href="#">Plague</a></li>
-                <li><a href="#">War</a></li>
+                <li><a href="death.html" target="_blank">Death</a></li>
+                <li><a href="plague.html" target="_blank">Plague</a></li>
+                <li><a href="war.html" target="_blank">War</a></li>
             </ul>
         </div> 
     </div>
