--- a/champion.html
+++ b/champion.html
@@ -68,23 +68,23 @@
         <div class="class-domains"><h2>Domains</h2></div>
         <div class="class-domains-text1">
             <ul>
-                <li><a href="#">War</a></li>
-                <li><a href="#">Battle</a></li>
-                <li><a href="#">Justice</a></li>
+                <li><a href="war.html" target="_blank">War</a></li>
+                <li><a href="battle.html" target="_blank">Battle</a></li>
+                <li><a href="justice.html" target="_blank">Justice</a></li>
             </ul>
         </div>    
         <div class="class-domains-text2">
             <ul>
-                <li><a href="#">Wind</a></li>
-                <li><a href="#">Battle</a></li>
-                <li><a href="#">War</a></li>
+                <li><a href="wind.html" target="_blank">Wind</a></li>
+                <li><a href="battle.html" target="_blank">Battle</a></li>
+                <li><a href="war.html" target="_blank">War</a></li>
             </ul>
         </div>             
         <div class="class-domains-text3">
             <ul>
-                <li><a href="#">Music</a></li>
-                <li><a href="#">Battle</a></li>
-                <li><a href="#">Wind</a></li>
+                <li><a href="music.html" target="_blank">Music</a></li>
+                <li><a href="battle.html" target="_blank">Battle</a></li>
+                <li><a href="wind.html" target="_blank">Wind</a></li>
             </ul>
         </div> 
     </div>
