--- a/frostweaver.html
+++ b/frostweaver.html
@@ -66,23 +66,23 @@
         <div class="class-domains"><h2>Domains</h2></div>
         <div class="class-domains-text1">
             <ul>
-                <li><a href="#">Storm</a></li>
-                <li><a href="#">Frost</a></li>
-                <li><a href="#">Protection</a></li>
+                <li><a href="storm.html" target="_blank">Storm</a></li>
+                <li><a href="frost.html" target="_blank">Frost</a></li>
+                <li><a href="protection.html" target="_blank">Protection</a></li>
             </ul>
         </div>    
         <div class="class-domains-text2">
             <ul>
-                <li><a href="#">Nature</a></li>
-                <li><a href="#">Frost</a></li>
-                <li><a href="#">Light</a></li>
+                <li><a href="nature.html" target="_blank">Nature</a></li>
+                <li><a href="frost.html" target="_blank">Frost</a></li>
+                <li><a href="light.html" target="_blank">Light</a></li>
             </ul>
         </div>             
         <div class="class-domains-text3">
             <ul>
-                <li><a href="#">Dark</a></li>
-                <li><a href="#">Frost</a></li>
-                <li><a href="#">Death</a></li>
+                <li><a href="dark.html" target="_blank">Dark</a></li>
+                <li><a href="frost.html" target="_blank">Frost</a></li>
+                <li><a href="death.html" target="_blank">Death</a></li>
             </ul>
         </div> 
     </div>
