--- a/ranger.html
+++ b/ranger.html
@@ -74,23 +74,23 @@
         <div class="class-domains"><h2>Domains</h2></div>
         <div class="class-domains-text1">
             <ul>
-                <li><a href="#">Music</a></li>
-                <li><a href="#">Dark</a></li>
-                <li><a href="#">Frost</a></li>
+                <li><a href="music.html" target="_blank">Music</a></li>
+                <li><a href="dark.html" target="_blank">Dark</a></li>
+                <li><a href="frost.html" target="_blank">Frost</a></li>
             </ul>
         </div>    
         <div class="class-domains-text2">
             <ul>
-                <li><a href="#">Plague</a></li>
-                <li><a href="#">Dark</a></li>
-                <li><a href="#">Nature</a></li>
+                <li><a href="plague.html" target="_blank">Plague</a></li>
+                <li><a href="dark.html" target="_blank">Dark</a></li>
+                <li><a href="nature.html" target="_blank">Nature</a></li>
             </ul>
         </div>             
         <div class="class-domains-text3">
             <ul>
-                <li><a href="#">Shadow</a></li>
-                <li><a href="#">Dark</a></li>
-                <li><a href="#">Plague</a></li>
+                <li><a href="shadow.html" target="_blank">Shadow</a></li>
+                <li><a href="dark.html" target="_blank">Dark</a></li>
+                <li><a href="plague.html" target="_blank">Plague</a></li>
             </ul>
         </div> 
     </div>
