--- a/templar.html
+++ b/templar.html
@@ -67,23 +67,23 @@
         <div class="class-domains"><h2>Domains</h2></div>
         <div class="class-domains-text1">
             <ul>
-                <li><a href="#">Battle</a></li>
-                <li><a href="#">Fire</a></li>
-                <li><a href="#">Wind</a></li>
+                <li><a href="battle.html" target="_blank">Battle</a></li>
+                <li><a href="fire.html" target="_blank">Fire</a></li>
+                <li><a href="wind.html" target="_blank">Wind</a></li>
             </ul>
         </div>    
         <div class="class-domains-text2">
             <ul>
-                <li><a href="#">Fire</a></li>
-                <li><a href="#">Protection</a></li>
-                <li><a href="#">Music</a></li>
+                <li><a href="fire.html" target="_blank">Fire</a></li>
+                <li><a href="protection.html" target="_blank">Protection</a></li>
+                <li><a href="music.html" target="_blank">Music</a></li>
             </ul>
         </div>             
         <div class="class-domains-text3">
             <ul>
-                <li><a href="#">Light</a></li>
-                <li><a href="#">Protection</a></li>
-                <li><a href="#">Justice</a></li>
+                <li><a href="light.html" target="_blank">Light</a></li>
+                <li><a href="protection.html" target="_blank">Protection</a></li>
+                <li><a href="justice.html" target="_blank">Justice</a></li>
             </ul>
         </div> 
     </div>
