--- a/cleric.html
+++ b/cleric.html
@@ -76,23 +76,23 @@
         <div class="class-domains"><h2>Domains</h2></div>
         <div class="class-domains-text1">
             <ul>
-                <li><a href="#">Fire</a></li>
-                <li><a href="#">Light</a></li>
-                <li><a href="#">Storm</a></li>
+                <li><a href="fire.html" target="_blank">Fire</a></li>
+                <li><a href="light.html" target="_blank">Light</a></li>
+                <li><a href="storm.html" target="_blank">Storm</a></li>
             </ul>
         </div>    
         <div class="class-domains-text2">
             <ul>
-                <li><a href="#">Nature</a></li>
-                <li><a href="#">Light</a></li>
-                <li><a href="#">Wind</a></li>
+                <li><a href="nature.html" target="_blank">Nature</a></li>
+                <li><a href="light.html" target="_blank">Light</a></li>
+                <li><a href="wind.html" target="_blank">Wind</a></li>
             </ul>
         </div>             
         <div class="class-domains-text3">
             <ul>
-                <li><a href="#">Justice</a></li>
-                <li><a href="#">Light</a></li>
-                <li><a href="#">Protection</a></li>
+                <li><a href="justice.html" target="_blank">Justice</a></li>
+                <li><a href="light.html" target="_blank">Light</a></li>
+                <li><a href="protection.html" target="_blank">Protection</a></li>
             </ul>
         </div> 
     </div>
