--- a/knight.html
+++ b/knight.html
@@ -80,23 +80,23 @@
         <div class="class-domains"><h2>Domains</h2></div>
         <div class="class-domains-text1">
             <ul>
-                <li><a href="#">War</a></li>
-                <li><a href="#">Death</a></li>
-                <li><a href="#">Battle</a></li>
+                <li><a href="war.html" target="_blank">War</a></li>
+                <li><a href="death.html" target="_blank">Death</a></li>
+                <li><a href="battle.html" target="_blank">Battle</a></li>
             </ul>
         </div>    
         <div class="class-domains-text2">
             <ul>
-                <li><a href="#">Battle</a></li>
-                <li><a href="#">Justice</a></li>
-                <li><a href="#">Music</a></li>
+                <li><a href="battle.html" target="_blank">Battle</a></li>
+                <li><a href="justice.html" target="_blank">Justice</a></li>
+                <li><a href="music.html" target="_blank">Music</a></li>
             </ul>
         </div>             
         <div class="class-domains-text3">
             <ul>
-                <li><a href="#">Protection</a></li>
-                <li><a href="#">Justice</a></li>
-                <li><a href="#">Nature</a></li>
+                <li><a href="protection.html" target="_blank">Protection</a></li>
+                <li><a href="justice.html" target="_blank">Justice</a></li>
+                <li><a href="nature.html" target="_blank">Nature</a></li>
             </ul>
         </div> 
     </div>
